--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.2",
     "http-status-codes": "^2.2.0",
     "mysql2": "^3.6.1",
+    "nodemailer": "^6.9.5",
     "nodemon": "^3.0.1",
     "sequelize": "^6.33.0",
     "winston": "^3.10.0"
